US8907 - Input icons buttons Add styles to searchbar wrapper div to prevent text/icon overlap.

--- a/assets/stylesheets/components/_forms.scss
+++ b/assets/stylesheets/components/_forms.scss
@@ -195,6 +195,9 @@ textarea {
 
 // 4. Search bar
 .searchbar {
+  margin-top: 5px;
+  margin-bottom: 5px;
+
   .form-control {
     // Removes validation styles
     &.ng-touched {
@@ -206,22 +209,60 @@ textarea {
 
       &.ng-valid:focus,
       &.ng-invalid:focus {
-        border-color: $input-border-focus;
-        box-shadow: inset 0 0 0 1px rgba($input-border-focus, .5);
+        border-color: $input-border;
+        box-shadow: inset 0 0 0 1px rgba($input-border, 1);
       }
     }
 
+
     &[placeholder] {
       text-overflow: ellipsis;
+    }
+
+    margin-top: 0;
+    margin-bottom: 0;
+    height: 38px;
+    width: calc(100% - 135px);
+    position: absolute;
+    top: 2px;
+    left: 2px;
+
+    &:focus {
+      border-color: $input-bg;
+      box-shadow: inset 0 0 0 1px rgba($input-bg, 1);
+    }
+  }
+
+  > input:focus + .searchbar-wrapper,
+  form + .searchbar-wrapper  {
+    border: 1px solid $input-border-focus;
+    box-shadow: inset 0 0 0 1px rgba($input-border-focus, .5);
+  }
+
+  .searchbar-wrapper {
+    background: $input-bg;
+    display: table-cell;
+    width: 100%;
+  }
+
+  .input-group-btn {
+    .btn {
+      margin-top: 0;
+      margin-bottom: 0;
     }
   }
 
   .addon-btn-group {
     display: table-cell;
-    padding: 10px 0;
+    padding: 6px 0;
     position: absolute;
     right: 60px;
     z-index: 4;
+
+    ul {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
 
     .addon-btn {
       background: transparent;
